Updated library sune-utils-load and made changes in the classes so that the updated version can be used.